--- a/ckanext-offgridtheme/ckanext/offgridtheme/sources/styles/less/homepage.less
+++ b/ckanext-offgridtheme/ckanext/offgridtheme/sources/styles/less/homepage.less
@@ -133,6 +133,8 @@
 }
 
 .tool-media {
+  margin-bottom: 20px;
+
   img {
     display: block;
     width: 100%;
@@ -142,6 +144,7 @@
   @media (min-width: 768px) {
     width: 64%;
     padding-right: 40px;
+    margin-bottom: 0;
   }
 }
 
